<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="done">Done</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="quickselection_share">Share via</string>
    <string name="carousel_title">Press and hold icons to rearrange</string>
    <string name="unremovable_warning_text">Unable to remove this tab</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_view_full">View</string>
    <string name="menu_view_video">Play</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="menu_set_as">Set as</string>
    <string name="menu_save_to_my_favorite">Set as favorite</string>
    <string name="menu_protect_info">Protection info</string>
    <string name="meun_rotate">Rotate</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_crop">Crop</string>
    <string name="menu_properties">Details</string>
    <string name="menu_show_on_map">Show on map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_send_photo_link_by_email">Share photo link</string>
    <string name="refresh">Refresh</string>
    <string name="add_comments">Add comment</string>
    <string name="button_show_caption">Show caption</string>
    <string name="button_hide_caption">Hide caption</string>
    <string name="button_show_description">Show description</string>
    <string name="button_hide_description">Hide description</string>
    <string-array name="st_font_size_levels">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra large</item>
        <item>Huge</item>
    </string-array>
    <string name="accessibility_tap_action">Double tap to action</string>
    <string name="reminderview_common_unlock_hint_icon">Pull icon up</string>
    <string name="reminderview_common_unlock_hint_up">Pull up to unlock</string>
    <string-array name="weeklayout_secondary_text">
        <item>SU</item>
        <item>M</item>
        <item>TU</item>
        <item>W</item>
        <item>TH</item>
        <item>F</item>
        <item>SA</item>
    </string-array>
</resources>